--- a/templates/index.html
+++ b/templates/index.html
@@ -6,25 +6,9 @@
   </head>
   
   <script>
-    document.addEventListener('DOMContentLoaded', function() {
-        var btn2Container = document.getElementById('btn2-container');
-        var btn2s = btn2Container.getElementsByClassName('btn2');
-        for (var i = 0; i < btn2s.length; i++) {
-          btn2s[i].addEventListener('click', function() {
-            this.disabled = true;
-            this.style.display = 'none'; // Hide the button
-
-            if (this.value === 'take off') {
-        var landBtn = document.getElementById('landBtn');
-        landBtn.style.display = 'block'; // Show the 'land' button
-      }
-
-          });
-        }
-      });
-     
     
-     var socket = new WebSocket('wss://' + location.host + '/action');
+    
+     var socket = new WebSocket('ws://' + location.host + '/action');
 	
 
 
@@ -38,8 +22,12 @@
      socket.addEventListener('message', function (event) {
 	     var data = JSON.parse(event.data);
 	     if (data.action == 'score') {
-		     document.getElementById('score').textContent = 'Score: ' + data.value;
+		     document.getElementById('score').textContent = + data.value + " KR";
 	     }
+
+       if (data.action == 'goal') {
+             alert(data.message);
+    }
      });
      function sendText(button) {
 
@@ -55,7 +43,7 @@
       <div class="button-container">
       <h1>Drone Controller</h1>
       <div class="score">
-        <h2 id="score">Score: 0</h2>
+        <h2 id="score">60 KR</h2>
         </div>
       </div>
       <div><button class="btn" value="forward" onclick="sendText(this)">Forward</button></div>
