--- a/static/css/mystyle.css
+++ b/static/css/mystyle.css
@@ -51,11 +51,11 @@ h1 {
 .button-container {
     display: flex;
     justify-content: center; /* or space-between, center, etc. */
-    gap:30px;
+    gap:40px;
     width: 50%; /* adjust as needed */
 }
 .button-container2 {
-    margin-top: 120px;
+    margin-top: 80px;
     display: flex;
     justify-content: center; /* or space-between, center, etc. */
     gap:20px;
@@ -63,8 +63,8 @@ h1 {
 }
 
 .btnTO {
-  background-color: #00cba9;
-  color:white;
+  background-color: #50C878;
+  color:black;
   border: none;
   padding: 35px 30px;
   text-align: center;
@@ -78,15 +78,14 @@ h1 {
 
 
 body {
-background-color: #045de9;
-background-image: linear-gradient(315deg, #045de9 0%, #09c6f9 74%);
+background-color:#28282B;
 min-height: 100vh;
 margin: 0;
 background-repeat: no-repeat;
 background-attachment: fixed;
 color:#F3F4F5;
 font-family: 'Public Sans Thin 100';
-font-size: 40px;
+font-size: 30px;
 
 }
 
@@ -178,6 +177,46 @@ font-size: 40px;
 
 .score {
   text-align: center;
+  text-align: start;
+  text-decoration: none;
+  font-family: 'Public Sans Thin 100' !important;
+  display: flex;
+  justify-content: center;
+}
+
+#score {
+  font-size: 30px;
+}
+
+
+.status-line {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.status-label {
+  margin-right: 10px;
+}
+
+.status-circle {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: green;
+}
+#signal-circle{
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: green;
+}
+
+.score-container {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  text-align: center;
   background-color:dimgray;
   color:#F3F4F5;
   border: none;
@@ -192,8 +231,48 @@ font-size: 40px;
   height: 45px;
   display: flex;
   justify-content: center;
+  margin-bottom:auto;
+}
+.stopwatchcontainer {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  text-align: center;
+  background-color:dimgray;
+  color:#F3F4F5;
+  border: none;
+  text-align: start;
+  text-decoration: none;
+  padding: 25px;
+  font-family: 'Public Sans Thin 100' !important;
+  border: solid black;
+  border-radius:10px;
+  opacity:0.8;
+  width:30%;
+  height: 45px;
+  display: flex;
+  justify-content: center;
+  margin-bottom:auto;
+}
+#score {
+  margin-left: 20px;
 }
 
-#score {
-  font-size: 30px;
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 30px;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  width: 50%;
+}
+
+.status-circle.yellow {
+  background-color: yellow;
 }
