--- a/static/css/mystyle.css
+++ b/static/css/mystyle.css
@@ -162,6 +162,39 @@ font-size: 30px;
     padding: 10px 20px; /* Increase the padding */
   }
 
+  /* Styles for the failure alert box */
+.failure-alert {
+  display: none;
+  position: fixed;
+  z-index: 1; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4); 
+  
+}
+
+.failure-alert-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  border: 6px solid #888;
+  width: 60%;
+  height: 35%;
+  color: black;
+  padding: 20px 40px; /* Increase the padding */
+  font-size:50px;
+  text-align: center;
+}
+
+.failure-alert-content button {
+  
+  padding: 10px 20px; /* Increase the padding */
+}
+
+
   #difficultyDisplay {
     font-size: 35px;   /* Increase the font size */
     font-weight: bold; /* Make the text bold */
