--- a/static/css/mystyle.css
+++ b/static/css/mystyle.css
@@ -86,6 +86,7 @@ background-attachment: fixed;
 color:#F3F4F5;
 font-family: 'Public Sans Thin 100';
 font-size: 30px;
+user-select: none;
 
 }
 
@@ -308,4 +309,20 @@ font-size: 30px;
 
 .status-circle.yellow {
   background-color: yellow;
+}
+.blinking {
+  animation: blink 1s infinite;
+  color:orange;
+}
+
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
